--- a/app/views/project/_summary.rhtml
+++ b/app/views/project/_summary.rhtml
@@ -1,3 +1,9 @@
-<div class="progress-bg"></div>
-<div id="project_<%= project.id %>" class="progress" style="width:80%"></div>
-<div class="progress-text"><%= link_to(project.name, link) %></div>
+<%
+link = {:controller => "project", :action => "show", :id => project.id}
+if(project.latest_revision)
+  link = {:controller => "revision", :action => "show", :id => project.latest_revision.id}
+end
+%>
+<div class="project-summary">
+  <%= build_link(project.latest_build) %> <%= link_to(project.name, link) %>
+</div>
