--- a/branches/damagecontrol_active_record/app/views/project/_summary.rhtml
+++ b/branches/damagecontrol_active_record/app/views/project/_summary.rhtml
@@ -1,5 +1,5 @@
 <%
-link = {:controller => "project", :action => "show", :id => project.id}
+link = {:controller => "project", :action => "edit", :id => project.id}
 if(project.latest_revision)
   link = {:controller => "revision", :action => "show", :id => project.latest_revision.id}
 end
