--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -10,18 +10,18 @@
     <%= auto_discovery_link_tag(feed.type, feed.url_options, {:title => feed.title}) %>
   <% end %>
 	
-	<%= stylesheet_link_tag("style.css", "diff.css", "undohtml.css") %>
+  <%= stylesheet_link_tag("style.css", "diff.css", "undohtml.css") %>
   <%= javascript_include_tag(
     "prototype",
     "effects",
-		"damagecontrol"
-	) %>
+    "damagecontrol"
+  ) %>
 </head>
 <body>
   <div id="banner">
     <p>
     <%= link_to "New Project", :controller => "project", :action => "new" %>
-  | <%= link_to "Artifacts", :controller => "file_system", :action => "artifacts" %>
+  | <%= link_to "Artifacts", :controller => "file_system", :action => "show" %>
     <% if(@project) %>
       | <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
     <% end %>
