--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -21,7 +21,7 @@
   <div id="banner">
     <p>
     <%= link_to "New Project", :controller => "project", :action => "new" %>
-  | <%= link_to "Artifacts", :controller => "file_system", :action => "show" %>
+  | <%= link_to "Artifacts", :controller => "file_system", :action => "browse" %>
     <% if(@project) %>
       | <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
     <% end %>
