--- a/app/views/file_system/dir.rhtml
+++ b/app/views/file_system/dir.rhtml
@@ -2,7 +2,7 @@
 <% Dir.foreach(@dir) do |child| next if child == '.' || child == '..' %>
   <div>
     <%= link_to(
-      image_tag(file_icon(child), :size => "16x16", :border => 0) + File.basename(child), 
+      image_tag(file_icon(File.join(@dir, child)), :size => "16x16", :border => 0) + File.basename(child), 
       :controller => "file_system", 
       :action => "browse", 
       :params => {:path => @path_array.dup << File.basename(child)}
