removed cruise importer and improved rubyscript2exe

--- a/app/views/project/show_import.rhtml
+++ b/app/views/project/show_import.rhtml
@@ -4,6 +4,7 @@
 <% else %>
 <h1>Import settings for new project</h1>
 <% end %>
+<b>Warning: This will not work if there is a proxy behind you and the SCM browser URL.</b>
 
 <%= form_tag(:action => "import") %>
   <table>
