--- a/app/views/project/settings.rhtml
+++ b/app/views/project/settings.rhtml
@@ -8,7 +8,7 @@ var settings = new Settings("setting-icons");
     <%= submit_tag("Delete #{@project.name}") %>
   </form>
 <% end %>
-<%= form_tag(:controller => "project", :action => @submit_action, :id => @project.id) %>
+<%= form_tag({:controller => "project", :action => @submit_action, :id => @project.id}, {:id => "project_settings"}) %>
 <%= submit_tag(@submit_text) %>
 
 <div id="settings-group">
