--- a/app/views/doc/trigger.rhtml
+++ b/app/views/doc/trigger.rhtml
@@ -3,6 +3,6 @@
 There are several different events that can trigger a build for a project.
 </p>
 <ul>
-  <li>DamageControl detected a new <%= link_to("revision", action=>"revision") %> in the SCM (someone committed files to the SCM).</li>
+  <li>DamageControl detected a new <%= link_to("revision", :action=>"revision") %> in the SCM (someone committed files to the SCM).</li>
   <li>DamageControl just successfully built an other project.</li>
 </ul>
