--- a/branches/damagecontrol_active_record/app/views/doc/sidebar.rhtml
+++ b/branches/damagecontrol_active_record/app/views/doc/sidebar.rhtml
@@ -22,11 +22,11 @@
 <%= link_to "Feeds", :action => "rss_atom" %><br/>
 <%= link_to "SCMs", :action => "scm" %><br/>
 <%= link_to "SCM browsers", :action => "scm_web" %><br/>
-<%= link_to "Api", :action => "security" %><br/>
-<%= link_to "Api", :action => "source" %><br/>
-<%= link_to "Api", :action => "stats" %><br/>
-<%= link_to "Api", :action => "tasks" %><br/>
-<%= link_to "Api", :action => "tracker" %><br/>
-<%= link_to "Api", :action => "trigger" %><br/>
-<%= link_to "Api", :action => "trouble_shooting" %><br/>
-<%= link_to "Api", :action => "web_service" %><br/>
+<%= link_to "Security", :action => "security" %><br/>
+<%= link_to "Source", :action => "source" %><br/>
+<%= link_to "Stats", :action => "stats" %><br/>
+<%= link_to "Tasks", :action => "tasks" %><br/>
+<%= link_to "Issue tracking", :action => "tracker" %><br/>
+<%= link_to "Built triggering", :action => "trigger" %><br/>
+<%= link_to "Troubleshooting", :action => "trouble_shooting" %><br/>
+<%= link_to "Web Services", :action => "web_service" %><br/>
