Started work on distributed builds

--- a/app/views/doc/import_project.rhtml
+++ b/app/views/doc/import_project.rhtml
@@ -57,4 +57,4 @@ and <a href="http://xforge.rubyforge.org/">MetaProject</a> to see what attribute
 
 <h2>Import settings from a YAML file under SCM</h2>
 If your project has a file called damagecontrol.yml in the root directory, DamageControl will
-update the settings autmatically whenever that file is changed.
+update the project settings with data from that file before the project (or more precisely, revision) is built.
