--- a/branches/damagecontrol_active_record/app/views/project/_project.rhtml
+++ b/branches/damagecontrol_active_record/app/views/project/_project.rhtml
@@ -15,6 +15,8 @@
     <td>Home page</td>
     <td><%= text_field("project", "home_page") %></td>
   </tr>
+  
+  <% unless @projects.empty? %>
   <tr>
     <td>Dependencies</td>
     <td>
@@ -29,4 +31,5 @@
       <% end %>  
     </td>
   </tr>
+  <% end %>
 </table>
