Added build executors, which will be the foundation of distributed builds

--- a/app/views/doc/build_tool.rhtml
+++ b/app/views/doc/build_tool.rhtml
@@ -14,6 +14,7 @@ This means that you still have to use a traditional build tool in conjunction wi
 This can be any kind of command line tool (meaning it has no graphical user interface, but can 
 be invoked from a dos prompt or shell program). Some common build tools are <a href="http://www.gnu.org/software/make/">Make</a>, 
 <a href="http://ant.apache.org/">Ant</a>, <a href="http://rake.rubyforge.org/">Rake</a>, 
+<a href="http://www.scons.org/">SCons</a>,
 <a href="http://maven.apache.org/">Maven</a> and <a href="http://nant.sourceforge.net/">NAnt</a>.
 </p>
 <p>
